--- a/package.json
+++ b/package.json
@@ -8,15 +8,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
+    "@types/jest": "^27.4.0",
+    "jest": "^27.5.1",
     "next": "12.0.10",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-testing-library": "^8.0.1"
   },
   "devDependencies": {
-    "@types/node": "17.0.17",
-    "@types/react": "17.0.39",
+    "@babel/preset-typescript": "^7.16.7",
+    "@testing-library/dom": "^8.11.3",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/node": "^17.0.18",
+    "@types/react": "^17.0.39",
+    "babel-jest": "^27.5.1",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
-    "typescript": "4.5.5"
+    "identity-obj-proxy": "^3.0.0",
+    "ts-jest": "^27.1.3",
+    "typescript": "^4.5.5"
   }
 }
